--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <img class="logo" src="src/images/logo.png" alt="Ania Kubows's logo" />
                 <ul id="nav-list">
-                    <li><a href ="#about-me">About me</a></li>
+                    <li><a href="#about-me" target="johnha.xyz/#aboutme">About me</a></li>
                     <li><a href ="#projects">Projects</a></li>
                     <li><a href ="#contact-me">Contact me</a></li>
                 </ul>
@@ -26,7 +26,7 @@
                 <div class="hero-text">
                     <h1>John Ha</h1>
                     <p>Full Stack Developer</p>
-                    <div class="button"><a href ="#about-me">About me</a></div>
+                    <div class="button"><a href ="#about-me">About me</a></div><div class="button"><a href ="#about-me">Resume</a></div>
                 </div>
                 <div class="socials">
                     <div><a href="https://www.github.com/johntuan"  class="social">
@@ -35,13 +35,18 @@
                     <div><a href="https://www.linkedin.com/in/johntha/" class="social">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                     </a></div>
+                    <div><a href="https://drive.google.com/file/d/19AJrouRWfI745Ak-u1R_7sCbNqZHZbVX/view?usp=sharing" class="social">
+                        <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M3 24h19v-23h-1v22h-18v1zm17-24h-18v22h18v-22zm-1 1h-16v20h16v-20zm-2 16h-12v1h12v-1zm0-3h-12v1h12v-1zm0-3h-12v1h12v-1zm-7.348-3.863l.948.3c-.145.529-.387.922-.725 1.178-.338.257-.767.385-1.287.385-.643 0-1.171-.22-1.585-.659-.414-.439-.621-1.04-.621-1.802 0-.806.208-1.432.624-1.878.416-.446.963-.669 1.642-.669.592 0 1.073.175 1.443.525.221.207.386.505.496.892l-.968.231c-.057-.251-.177-.449-.358-.594-.182-.146-.403-.218-.663-.218-.359 0-.65.129-.874.386-.223.258-.335.675-.335 1.252 0 .613.11 1.049.331 1.308.22.26.506.39.858.39.26 0 .484-.082.671-.248.187-.165.322-.425.403-.779zm3.023 1.78l-1.731-4.842h1.06l1.226 3.584 1.186-3.584h1.037l-1.734 4.842h-1.044z"/></svg>
+                    </a></div>
                 </div>
             </div>
         </section>
         <section class="sub-section" id="about-me">
             <div class="information">
                 <h2>About Me</h2>
-                <p>Hello. My name is John Ha. </p>
+                <p>Hello. My name is John Ha. I am a customer service extraordinaire. I design, build immersive and beautiful web applications through carefully crafted code and user-centric design. So are you looking for a hard-working, communicative & caring developer? I am super excited to work on ambitious projects with positive people.
+
+                    Check out my resume or contact me below </p>
             </div>
             <div class="headshot-container">
                 <img class="headshot" src="src/images/headshot.jpg" alt = "John Ha headshot" />
@@ -51,23 +56,25 @@
             <h2>Projects</h2>
             <div class="project-container">
                 <div class="project-card">
-                    <img class="project-image" src="src/images/project1.jpg" alt="Project One Image" />
+                    <img class="project-image" src="src/images/Finstagram.png" alt="Project One Image" />
                     <h3>Project One - Social Media Platform</h3>
-                    <p class="subtext"> This is my project and some text about it. I enjoyed making this project.</p>
+                    <p class="subtext"> A project using Ruby, Sintatra framework, and SQL to develop a social media platform for fish
+                        lovers
+                    </p>
                     <hr/>
                     <p class="subtext"><a class ="project-link" href="https://stormy-beach-79312.herokuapp.com/">View here</a></p>
                 </div>
                 <div class="project-card">
-                    <img class="project-image" src="src/images/project2.jpg" alt="Project One Image" />
+                    <img class="project-image" src="src/images/Jobboard.png" alt="Project two Image" />
                     <h3>Project Two - Job Board</h3>
-                    <p class="subtext"> This is my project and some text about it. I enjoyed making this project.</p>
+                    <p class="subtext"> Built a job board using Python language and Flask. The main page of the site will show all jobs and each job and employers will have dedicated pages. Users will also be able to review each employer.</p>
                     <hr/>
                     <p class="subtext"><a class ="project-link" href="https://github.com/johntuan/Flask-JobBoard">View here</a></p>
                 </div>
                 <div class="project-card">
-                    <img class="project-image" src="src/images/project3.png" alt="Project One Image" />
+                    <img class="project-image" src="src/images/Sudoku.png" alt="Project three Image" />
                     <h3>Project Three - Sudoku GUI Solver</h3>
-                    <p class="subtext"> This is my project and some text about it. I enjoyed making this project.</p>
+                    <p class="subtext"> Sudoku solver built with Python and Pygame. Able to play the game and press space for the solver; featuring backtracking algorithm.</p>
                     <hr/>
                     <p class="subtext"><a class ="project-link" href="https://github.com/johntuan/Sudoku-Solver-">View here</a></p>
                 </div>
@@ -75,7 +82,25 @@
         </section>
         <footer id="contact-me">
             <h2>Contact me</h2>
-            <p>John.Ha1234@gmail.com</p>
+            <div class="container">
+                <form target="_blank" action="https://formsubmit.co/john.ha1234@gmail.com" method="POST">
+                    <div class="form-group">
+                        <div class="form-row">
+                            <div class="col">
+                                <input type="hidden" name="_subject" value="New email woooo!">
+                                <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+                            </div>
+                            <div class="col">
+                                <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+                </form>
+            </div>
         </footer>
 
 
