--- a/index.html
+++ b/index.html
@@ -47,10 +47,23 @@
                 <h2>About Me</h2>
                 <p>Hello. My name is John Ha. I am a customer service extraordinaire. I design, build immersive and beautiful web applications through carefully crafted code and user-centric design. So are you looking for a hard-working, communicative & caring developer? I am super excited to work on ambitious projects with positive people.
 
-                    Check out my resume or contact me below </p>
+                    Check out my resume or contact me below 
+                
+                
+
+                </p>        
             </div>
             <div class="headshot-container">
-                <img class="headshot" src="src/images/headshot.jpg" alt = "John Ha headshot" />
+                <img algin = "right" class="headshot" src="src/images/headshot.jpg" alt = "John Ha headshot" />
+            </div>
+            <br>
+            <div class ="whatido">
+                    <span><h3>What I do</h3>
+                    <h4>Responsive Web Design</h4> 
+                    <p>Design responsive layout so your website fluidly resizes for optimal viewing, and is accessible to all users, regardless of their device. A responsive website is key for search engine optimization and customer experience.</p>
+                    <h4>Web Development</h4>
+                    <p>Creating a strong foundation for a website with HTML, CSS, and JS with custom plugins, features, animations, and interactive layouts. Having a fast, high-performance website is key to convert your audience into customers.</p>
+                    </span>
             </div>
         </section>
         <section class ="sub-section-alt" id="projects">
